syntax = "proto3";

package greeter;


//GetBalance
message GetBalanceRequest {
    string token = 1;
    string address = 2;
}
message GetBalanceResponse {
    string balance = 1;
}

//CreateAddress
message CreateAddressRequest {
}
message CreateAddressResponse {
    string private_key = 1;
    string address = 2;
}

//block
//message ChainResponse{
//    repeated BlockResponse blocks = 1;
//}
//message BlockRequest {
//    string type = 1;
//    string data = 2;
//}
//message BlockResponse {
//    string height = 1;
//    string hash = 2;
//    string time = 3;
//    Transaction transaction = 4;
//}
//message Transaction{
//    Tx input = 1;
//    Tx output = 2;
//}
//message Tx{
//    string address = 1;
//    string token = 2;
//    string amount = 3;
//    string time = 4;
//}




service Greeter {
    rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);
    rpc CreateAddress(CreateAddressRequest) returns (CreateAddressResponse);
//    rpc GetBlock(BlockRequest) returns(BlockResponse);
}
