syntax = "proto3";
package token;
/*
*/
message TokenRequest {
    string private_key = 1;
    string address = 2;
    string token = 3;
    string amount = 4;
}

message TokenResponse {
    string hash = 1;
}



service Token {
    rpc TokenRpc (TokenRequest) returns (TokenResponse);
}
